# 3DEngine

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  flowLinux.sh  flowWin.bat
editor/: CMakeLists.txt
editor/src/: editor.cpp
editor/src/context/: context.h  events.h  helpers.h  inputs.h  widget.h
editor/src/controls/: IControl.h  camera.h  directlight.h  enttinfo.h  transform.h
editor/src/windows/: hierarchy.h  inspector.h  menubar.h  resource.h  viewport.h
engine/: CMakeLists.txt
engine/include/: flow.cpp  flow.h
engine/include/application/: application.h  context.h  interface.h
engine/include/auxillaries/: ECS.h  assets.h  serializer.h
engine/include/common/: YAML.h  core.h  event.h
engine/include/graphics/: renderer.h
engine/include/graphics/buffers/: frame.h  mesh.h  vertex.h
engine/include/graphics/models/: animation.h  animator.h  helper.h  model.h
engine/include/graphics/shaders/: BRDF.h  PBR.h  bloom.h  final.h  irradiance.h  prefiltered.h  shader.h  shadow.h  skybox.h  skymap.h
engine/include/graphics/textures/: texture.h
engine/include/graphics/utilities/: data.h  quad.h  skybox.h
engine/include/physics/: callback.h  context.h  helpers.h  utilities.h
engine/include/scripts/: context.h  helpers.h  utilities.h
engine/include/window/: events.h  inputs.h  window.h
game/: CMakeLists.txt
game/src/: game.cpp
resources/: DESIGN.md
resources/models/: sphere.fbx  suzanne.fbx
resources/projects/: assets.yaml  scene.yaml
resources/scripts/: testScript.lua
resources/scripts/engine/: core.lua  input.lua
resources/shaders/: bloom.frag  brdf.frag  brdf.vert  final.frag  final.vert  irradiance.frag  irradiance.vert  pbr.frag  pbr.vert  prefiltered.frag  prefiltered.vert  shadow.vert  skybox.frag  skybox.vert  skymap.frag  skymap.vert
